# DeltaSwarm

./: .gitignore  README.md  global_constants.h
DeltaRho_ESP_Main/: CMakeLists.txt  platformio.ini  sdkconfig.delta-rho-robot  sdkconfig.delta-rho-robot.old
DeltaRho_ESP_Main/src/: main.c
ESP_Main/: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig.old
ESP_Main/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
ESP_Main/include/: config.h  pin_definitions.h
ESP_Main/lib/Communication_Protocols/: ESP_SPI.cpp  ESP_SPI.h  I2C.cpp  I2C.h  Pico_UART.h  README.md
ESP_Main/lib/Misc_Utils/: battery.cpp  battery.h
ESP_Main/lib/ROS_stuff/: ROS_Callbacks.cpp  ROS_Callbacks.h  ROS_Publishers.cpp  ROS_Publishers.h
ESP_Main/lib/Robot/: Robot.cpp  (+1 more)
ESP_Main/main/: CMakeLists.txt  initializations.cpp  initializations.h  main.c  main.cpp
Pico_Main/: CMakeLists.txt  platformio.ini
Pico_Main/include/: config.h  motion_controller.h  pin_definitions.h  status_LED.h
Pico_Main/lib/: status_LED.cpp
Pico_Main/lib/Communication/: I2C_Control.c  I2C_Control.h
Pico_Main/lib/I2C_Control/: IMU.h  i2c_control.h  pico_client.c  pico_client.cpp  pico_client.h  pico_i2c.c  pico_i2c_periph.cpp
Pico_Main/lib/LED/: status_LED.cpp  status_LED.h
Pico_Main/lib/Motion/: encoder.cpp  encoder.h  motion_controller.cpp  motion_controller.h  motor.cpp  motor.h
Pico_Main/lib/Testing/: serial_debugger.cpp  serial_debugger.h
Pico_Main/lib/UART_to_ESP/: uart_control.cpp  uart_control.h
Pico_Main/src/: config.h  main.cpp  motion_controller.cpp  test.c
(+4 files in other folders)
