idf_component_register(SRCS "main.cpp"
                            "../lib/Status_LED/status_leds.cpp"
                            "initializations.cpp"
                    INCLUDE_DIRS "."
                    "../include/Eigen"
                    "../lib/Communication_Protocols"
                    "../lib/Odometry/extended_kf"
                    "../lib/Status_LED"
                    "../lib/ROS_stuff"
                    "../lib/Misc_Utils"
                    "../lib/")